feat:regenerate seed